--- a/src/main.css
+++ b/src/main.css
@@ -28,10 +28,14 @@ button {
 
 .sub-menu-ul {
     opacity: 0;
-    transition: opacity 0.3s ease; /* Transición de opacidad durante 0.3 segundos */
+    transition: opacity 0.1s ; 
+    position: absolute;
+
   }
-  
-  .sub-menu-ul.open {
-    opacity: 1;
-  }
+
+.sub-menu-ul.open {
+opacity: 1;
+position: absolute;
+
+}
   
