--- a/src/main.css
+++ b/src/main.css
@@ -45,18 +45,12 @@ li {
     /* ... Otros estilos ... */
     opacity: 0;
     transition: opacity 0.1s;
-    position: absolute;
-    top: 100%; /* Coloca el submenú debajo del elemento <li> */
-    left: 0; /* Alinea el submenú con el borde izquierdo del elemento <li> */
 }
 
 .sub-menu-ul.open {
     /* ... Otros estilos ... */
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: relative;
     opacity: 1;
-    /* Puedes ajustar left y top según tus preferencias para el posicionamiento exacto */
-    left: 331px;
-    top: 80px; /* Esto controla la distancia desde la parte superior del elemento <li> */
 }
