--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,8 @@ nav{
     list-style: none;
     width: 1350px;
     padding: 0rem; /*  Para que quede contra el margen */
-    justify-content:center;
+    justify-content:start;
+    position: absolute;
   }
 
 /* 
@@ -26,7 +27,6 @@ button {
 
 li {
     display: block;
-    
     width: 200px;
     height: 30px;
     color: black;
@@ -39,18 +39,23 @@ li {
     margin-right: 1px;
 }
 
-
-/* Estilo del submenú */
-.sub-menu-ul {
-    /* ... Otros estilos ... */
-    opacity: 0;
-    transition: opacity 0.1s;
+.ul-segundo-nivel {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 11px;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
 }
 
-.sub-menu-ul.open {
-    /* ... Otros estilos ... */
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    opacity: 1;
+.ul-tercer-nivel {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: -1.4em;
+    margin-block-end: 0em;
+    margin-inline-start: 201px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
 }
+
