--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,13 @@
+.container{
+    display: flex;
+    flex-direction: column;
+}
+
+.container2{
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+}
 
 .main-nav {
     display: flex; 
