--- a/src/main.css
+++ b/src/main.css
@@ -29,7 +29,7 @@
     justify-content: center;
     text-align:center;
     border: 1px solid black ;
-    margin-right: 1px;
+    margin-right: 0px;
     transition: 0.5s
 }
 
@@ -39,13 +39,14 @@
     height: 30px;
     color: black;
     border-radius: 10px 10px 10px 10px;
-    background-color: rgb(176, 188, 189);
+    box-shadow: rgb(95, 116, 99) 5px 0px 5px;
+    background-color: #F0E853;
     cursor: pointer;
     align-items: center;
     justify-content: center;
     text-align:center;
     border: 1px solid black ;
-    margin-right: 1px;
+    margin-right: 0px;
 }
 
 .li-subMenu {
@@ -65,7 +66,7 @@
 }
 .li-subMenu:hover{
     box-shadow: rgb(95, 116, 99) 2px 3px 0px;
-    background-color:rgb(130, 185, 200);
+    background-color:#F0E853;
 }
 
 .ul-segundo-nivel {
