--- a/src/main.css
+++ b/src/main.css
@@ -25,7 +25,6 @@
     height: 30px;
     color: black;
     border-radius: 0 0 0 0;
-    cursor: pointer;
     align-items: center;
     justify-content: center;
     text-align:center;
@@ -41,11 +40,14 @@
     border-radius: 20px 20px 20px 20px;
     box-shadow: rgb(143, 160, 147) 5px 0px 5px 5px;
     background-color: #F0E853;
-    cursor: pointer;
     align-items: center;
     justify-content: center;
     text-align:center;
     margin-right: 0px;
+}
+
+span:hover {
+    cursor: pointer;
 }
 
 .li-subMenu {
